--- a/brd-ios/breadwallet/src/Strings/da.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/da.lproj/Localizable.strings
@@ -73,6 +73,9 @@
 /* Error alert title */
 "Alert.error" = "Fejl";
 
+/* Error title when balance to low */
+"Alert.ethBalance" = "Insufficient Ethereum Balance";
+
 /* Keystore error */
 "Alert.keystore.generic.android" = "Der er et problem med din Android OS keystore, kontakt venligst support@fabriik.com";
 
@@ -148,6 +151,9 @@
 /* API Token error message */
 "ApiClient.tokenError" = "Kunne ikke hente API-nøgle";
 
+/* ATM Cash Locatios View Title */
+"ATMMapView.title" = "ATM Cash Locations Map";
+
 /* Send BCH view body. */
 "BCH.body" = "Indtast en BCH destinationsadresse nedenfor. Alle BCH i din wallet ved fork-tidspunktet (%1$@) vil blive afsendt.";
 
@@ -205,6 +211,9 @@
 /* Cancel button label */
 "Button.cancel" = "Annuller";
 
+/* Close button */
+"Button.close" = "Close";
+
 /* Confirm button title */
 "Button.confirm" = "Bekræft";
 
@@ -226,6 +235,9 @@
 /* Ignore button label */
 "Button.ignore" = "Ignorer";
 
+/* Map button */
+"Button.map" = "Map";
+
 /* Maybe Later button label */
 "Button.maybeLater" = "Måske senere";
 
@@ -246,6 +258,9 @@
 
 /* receive button */
 "Button.receive" = "Modtag";
+
+/* Search button */
+"Button.search" = "Search";
 
 /* Button label to open Security Settings. */
 "Button.securitySettings.android" = "Sikkerhedscenter";
@@ -280,6 +295,27 @@
 /* Camera plugin instruction */
 "CameraPlugin.centerInstruction" = "Centrer dit ID i boksen";
 
+/* Cash Token Action Instructions */
+"CashToken.actionInstructions" = "Please send bitcoin to this address to withdraw at the ATM. Scan QR code or copy and paste to send bitcoin. Note that it may take a few minutes for the transfer to be confirmed.";
+
+/* Cash Token Location */
+"CashToken.amountBTC" = "Amount (BTC)";
+
+/* Cash Token Amount */
+"CashToken.amountUSD" = "Amount (USD)";
+
+/* Cash Token Label */
+"CashToken.awaitingFunds" = "Awaiting Funds";
+
+/* Cash Token Label */
+"CashToken.label" = "Withdrawl Status";
+
+/* Cash Token Location */
+"CashToken.location" = "Location";
+
+/* Cash Token Please Verify */
+"CashToken.pleaseVerify" = "Please Verify";
+
 "CloudBackup.backupDeleted" = "Sikkerhedskopiering slettet";
 
 "CloudBackup.backupDeletedMessage" = "Din iCloud-sikkerhedskopi er slettet efter for mange mislykkede PIN-forsøg. Appen genstarter nu.";
@@ -313,6 +349,8 @@
 "CloudBackup.recoverButton" = "Gendan fra genoprettelsesnøgle";
 
 "CloudBackup.recoverHeader" = "Indtast pinkoden for at låse op iCloud-sikkerhedskopi";
+
+"CloudBackup.recoverWarning" = "A previously backed up wallet has been detected. Using this backup is recommended. Are you sure you want to proceeed with restoring from a recovery phrase?";
 
 "CloudBackup.restoreButton" = "Gendan fra iCloud Backup";
 
@@ -442,6 +480,9 @@
 /* Email unavailable alert title */
 "ErrorMessages.emailUnavailableTitle" = "E-mail utilgængelig";
 
+/* Not enough ETH for transaction fee */
+"ErrorMessages.ethBalanceLow" = "Insufficient Ethereum balance in your wallet to transfer this type of token.";
+
 /* Message that gets shown when we've detected the user has encountered the looping lock-screen bug. (preserve [ ] characters) */
 "ErrorMessages.loopingLockScreen.android" = "Fabriik kan ikke godkendes grundet en fejl i din version af Android. [Tryk her for flere oplysninger.]";
 
@@ -557,6 +598,9 @@
 /* Switch label to enable fingerprint authentication to unlock BRD app */
 "FingerprintSettings.unlockApp" = "Brug fingeraftrykket til at låse Fabriik op";
 
+/* Activity button on the home screen toolbar */
+"HomeScreen.activity" = "Activity";
+
 /* This is the section that allows administration of the user's wallet */
 "HomeScreen.admin" = "Administration";
 
@@ -590,14 +634,29 @@
 /* empty private key error message */
 "Import.Error.empty" = "Denne private nøgle er tom.";
 
+/* Failed to submit transaction error message */
+"Import.Error.failedSubmit" = "Failed to submit transaction.";
+
 /* High fees error message */
 "Import.Error.highFees" = "Transaktionsgebyrer vil koste mere end der er midler til på denne private nøgle.";
 
 /* Not a valid private key error message */
 "Import.Error.notValid" = "Ikke en gyldig privat nøgle";
 
+/* Service error error message */
+"Import.Error.serviceError" = "Service Error";
+
+/* Service Unavailable error message */
+"Import.Error.serviceUnavailable" = "Service Unavailable";
+
 /* Import signing error message */
 "Import.Error.signing" = "Fejl ved underskrivelse af transaktion";
+
+/* Unable to sweep wallet error message */
+"Import.Error.sweepError" = "Unable to sweep wallet";
+
+/* Unsupported currency error message */
+"Import.Error.unsupportedCurrency" = "Unsupported Currency";
 
 /* [Redeem] the funds stored on this private key. */
 "Import.importButton" = "Indløs";
@@ -710,7 +769,15 @@
 "MenuButton.addWallet" = "Tilføj pung";
 
 /* Menu button title */
+"MenuButton.atmCashRedemption" = "ATM Cash Redemption";
+
+"MenuButton.feedback" = "Support";
+
+/* Menu button title */
 "MenuButton.lock" = "Lås pung";
+
+/* (Click here to) manage (your list of) wallets */
+"MenuButton.manageAssets" = "Manage Assets";
 
 /* (Click here to) manage (your list of) wallets */
 "MenuButton.manageWallets" = "Administrer Tegnebøger";
@@ -1307,6 +1374,12 @@
 /* Emtpy pasteboard error message */
 "Send.emptyPasteboard" = "Tegnebord er tomt";
 
+/* Sending error message */
+"Send.Error.authenticationError" = "Authentication Error";
+
+/* Error calculating maximum. */
+"Send.Error.maxError" = "Could not calculate maximum";
+
 /* "(you) can't send (to your)self" */
 "Send.ethSendSelf" = "Kan ikke sende til dig selv.";
 
@@ -1388,6 +1461,9 @@
 /* Scan button label */
 "Send.scanLabel" = "Scan";
 
+/* Title for error when send request times out and we are not sure weather it succesfull or not. */
+"Send.sendError" = "Send Error";
+
 /* Sending Max: $4.00 for iOS, the balance can't have a parameter */
 "Send.sendingMax" = "Sender maks:";
 
@@ -1396,6 +1472,9 @@
 
 /* Send button label (for special case where the user specified send amount is too high and does not leave a balance to cover fees.) */
 "Send.sendMaximum" = "Send maksimumsbeløb?";
+
+/* Error message when send request times out and we are not sure weather it succesfull or not. */
+"Send.timeOutBody" = "Timed out waiting for network response. Please wait 30 minutes for confirmation before retrying.";
 
 /* Send screen title (as in "this is the screen for sending money") */
 "Send.title" = "Send penge";
@@ -1461,6 +1540,9 @@
 
 /* Manage settings section header */
 "Settings.manage" = "Administrer";
+
+/* No log files found error message */
+"Settings.noLogsFound" = "No Log files found. Please try again later.";
 
 /* Notifications label */
 "Settings.notifications" = "Notifikationer";
@@ -1625,6 +1707,10 @@
 "SupportForm.notNow" = "Ikke nu";
 
 "SupportForm.pleaseDescribe" = "Beskriv din oplevelse";
+
+"Symbols.lock" = "\u{1F512}";
+
+"Symbols.narrowSpace" = "\u{2009}";
 
 /* Syncing view done syncing state header text */
 "SyncingView.activity" = "Aktivitet";
@@ -1954,6 +2040,8 @@
 /* (this transaction was) Sent to this address: */
 "TransactionDirection.to" = "Sendt til denne adresse";
 
+"UDomains.invalid" = "Invalid address.";
+
 /* Disabled until date */
 "UnlockScreen.disabled" = "Deaktiveret indtil: %1$@";
 
@@ -1984,6 +2072,15 @@
 /* Device authentication title */
 "UnlockScreen.touchIdTitle.android" = "Autentificering påkrævet";
 
+/* Wallet disabled header */
+"UnlockScreen.walletDisabled" = "Wallet disabled";
+
+/* Wallet disabled description */
+"UnlockScreen.walletDisabledDescription" = "You will need your recovery phrases to reset PIN.";
+
+/* Wipe wallet prompt */
+"UnlockScreen.wipePrompt" = "Are you sure you would like to wipe this wallet?";
+
 /* Update PIN caption text */
 "UpdatePin.caption" = "Husk denne PIN. Hvis du glemmer den, vil du ikke kunne få adgang til dine bitcoin.";
 
@@ -2002,8 +2099,17 @@
 /* Enter new PIN instruction */
 "UpdatePin.enterNew" = "Indtast din nye PIN.";
 
+/* Enter PIN instruction */
+"UpdatePin.enterYourPin" = "Enter your PIN";
+
 /* Re-Enter new PIN instruction */
 "UpdatePin.reEnterNew" = "Genindtast din nye PIN.";
+
+/* Enter PIN header */
+"UpdatePin.securedWallet" = "Secured wallet";
+
+/* Update PIN title */
+"UpdatePin.setNewPinTitle" = "Set your new PIN";
 
 /* Update PIN failure error message. */
 "UpdatePin.setPinError" = "Beklager, kunne ikke opdatere PIN.";
@@ -2025,6 +2131,21 @@
 
 /* Copy wallet addresses alert button label */
 "URLHandling.copy" = "Kopier";
+
+/* Verification Code Action Instructions */
+"VerificationCode.actionInstructions" = "Check your phone for the confirmation token we sent you. It may take a couple of minutes.";
+
+/* Verification Code Label */
+"VerificationCode.actionLabel" = "Enter token";
+
+/* Verification Code Confirm Button */
+"VerificationCode.buttonConfirm" = "Confirm";
+
+/* Verification Code Label */
+"VerificationCode.label" = "We Texted You a Confirmation Code";
+
+/* Verification Code Title */
+"VerificationCode.title" = "Confirmation Code";
 
 /* Verify PIN for transaction view body */
 "VerifyPin.authorize" = "Indtast venligst din PIN for at godkende denne transaktion.";
